[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/baseEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/pegasusEnemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/horsewings.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="enemy" instance=ExtResource( 1 )]
collision_layer = 16
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )

[node name="chargeCooldown" type="Timer" parent="." index="6"]

[node name="aimTime" type="Timer" parent="." index="7"]

[node name="chargeUp" type="Timer" parent="." index="8"]

[connection signal="timeout" from="chargeCooldown" to="." method="_on_chargeCooldown_timeout"]
[connection signal="timeout" from="aimTime" to="." method="_on_aimTime_timeout"]
[connection signal="timeout" from="chargeUp" to="." method="_on_chargeUp_timeout"]
